--- a/css/pages/list-cars.css
+++ b/css/pages/list-cars.css
@@ -83,3 +83,120 @@ header .box-purple {
   background: var(--primary-color);
   height: 100%;
 }
+
+.container .content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+
+/* CARS */
+.container .content .cars {
+  width: 84%;
+  height: 80%;
+
+  margin: auto;
+
+  margin-top: 46px
+}
+
+.cars hr {
+  background-color: #DEDEE3;
+  opacity: 0.1;
+}
+
+.cars main {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-items: center;
+  justify-content: center;
+
+  margin-top: 40px;
+  row-gap: 30px;
+}
+
+.cars .header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 15px;
+}
+
+.cars .header-content h2.title {
+  font-size: 36px;
+}
+
+.cars main .car {
+  width: 360px;
+  height: 276px;
+  background-color: var(--background-card);
+
+  transition: .1s;
+  position: relative;
+}
+
+.car::before {
+  content: ' ';
+
+  width: 0%;
+  height: 2px;
+  background-color: var(--primary-color);
+
+  position: absolute;
+  bottom: 0;
+  left: -1px;
+
+  transition: all .2s;
+}
+
+.car:hover::before {
+  width: 100%;
+}
+
+.car-content .car-image {
+  display: flex;
+  justify-content: center;
+
+  padding-top: 10px;
+}
+
+.car-content .car-image img {
+  width: 100%;
+  height: 132px;
+  max-width: 288px;
+}
+
+.car-content .car-image img, .info {
+  margin: 20px;
+}
+
+.info>span {
+  font-weight: 500;
+  font-size: 12px;
+  color: #AEAEB3;
+}
+
+.group-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.group-info h3, .group-info span {
+  font: 500 20px var(--family-archivo);
+}
+
+.group-info span {
+  color: var(--primary-color);
+  font-size: 18px;
+}
+
+.group-info h3 {
+  color: var(--title);
+}
+
+.group-info img {
+  width: 32px;
+}
