--- a/css/pages/list-cars.css
+++ b/css/pages/list-cars.css
@@ -98,7 +98,21 @@ header .box-purple {
 
   margin: auto;
 
-  margin-top: 46px
+  margin-top: 46px;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #F4F4F4;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  background: #F4F4F4;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dad7d7;
 }
 
 .cars hr {
