--- a/css/global.css
+++ b/css/global.css
@@ -40,6 +40,7 @@ body {
 
 a {
   text-decoration: none;
+  color: var(--title);
 }
 
 .button {
@@ -52,4 +53,15 @@ a {
 .title-page {
   font-weight: 600;
   font-size: 20px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+.container .content {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
