--- a/css/pages/perfil-user.css
+++ b/css/pages/perfil-user.css
@@ -1,4 +1,3 @@
-
 .wrapper-perfil {
   display: flex;
   align-items: center;
@@ -6,11 +5,21 @@
   width: 100%;
 }
 
+.wrapper-perfil .divider {
+  width: 2px;
+  height: 100%;
+  background-color: #DEDEE3;
+}
+
 .wrapper-perfil h4 {
   width: 75px;
   margin: 20px auto 20px;
   border-bottom: 2px solid var(--primary-color);
   text-align: center;
+}
+
+.wrapper-perfil .user-data {
+  margin: -90px 0 30px 30px;
 }
 
 .content-user .wrapper-image {
